# witsml_viewer

./: .dockerignore  .env.example  .gitignore  README.md  _feat.db-journal  docker-compose.yml  run.bat  run.sh
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .keep
backend/app/: __init__.py  config.py  main.py
backend/app/api/: admin.py  auth.py  comparison.py  curves.py  discovery.py  export.py  formulas.py  health.py  pages.py  parameters.py  reports.py  router.py  servers.py  store_write.py  units.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/db/: __init__.py  base.py  models.py  seed.py
backend/app/domain/: __init__.py  models.py
backend/app/export/: __init__.py  excel.py  pdf.py
backend/app/formulas/: __init__.py  hydraulics.py
backend/app/ingestion/: __init__.py  scheduler.py  store.py
backend/app/units/: __init__.py  dictionary.py  engine.py
backend/app/witsml/: __init__.py  client.py  client_factory.py  constants.py  parse.py  polling.py  queries.py
backend/app/ws/: __init__.py  hub.py
backend/tests/: conftest.py  test_ingestion.py  test_parse.py  test_phase35.py  test_phase67.py  test_polling.py  test_polling_tz.py  test_queries.py  test_units.py  test_write_read.py
backend/tests/fixtures/: log_data_depth.xml  log_data_latest_sparse.xml  log_data_time.xml  log_header_depth_decreasing.xml  log_header_time.xml  mudlog.xml  wellbores.xml  wells.xml
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: admin.ts  auth.ts  comparison.ts  export.ts  formulas.ts  http.ts  ingest.ts  pages.ts  queries.ts  reports.ts  types.ts  useWellStream.ts  ws.ts
frontend/src/components/comparison/: CompareChart.tsx  LithologyTable.tsx  (+1 more)
frontend/src/pages/: AdminPage.tsx  ComparisonPage.tsx  DashboardPage.tsx  FormulasPage.tsx  Layout.tsx  LoginPage.tsx  PageEditor.tsx  PagesPage.tsx  ReportsPage.tsx  WellsPage.tsx
frontend/src/store/: auth.ts  session.ts
mockstore/: Dockerfile  __init__.py  _verify.py  server.py  store.py  wmls.wsdl
scripts/: README.md  feature_test.py  live_ingest_test.py
simulator/: Dockerfile  __init__.py  feed_simulator.py
(+9 files in other folders)
