[project]
name = "witsml-mudlogging-backend"
version = "0.1.0"
description = "WITSML 1.4.1.1 mudlogging monitoring & data-management BFF"
requires-python = ">=3.11"
dependencies = [
    # ── Web / async ──
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "python-multipart>=0.0.9",
    # ── Config / validation ──
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # ── WITSML SOAP + XML ──
    "zeep>=4.2",
    "httpx>=0.27",
    # zeep uses `packaging` (optionally) to pick the httpx proxy kwarg for its
    # AsyncTransport; without it AsyncTransport refuses to construct. zeep does
    # not hard-require it, so declare it explicitly.
    "packaging>=23",
    "lxml>=5.2",
    # ── Persistence ──
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "greenlet>=3.0",
    # ── Cache / pubsub ──
    "redis>=5.0",
    # ── Scheduling ──
    "apscheduler>=3.10",
    # ── Numerics / transforms ──
    "numpy>=1.26",
    "pandas>=2.2",
    # ── Safe expression evaluation (units + hydraulics formulas) ──
    "simpleeval>=0.9.13",
    # ── Security ──
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    # ── Export ──
    "openpyxl>=3.1",
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "types-requests",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
# B008: FastAPI Depends() in defaults. UP042: str+Enum is a deliberate,
# widely-used pattern (StrEnum changes .value semantics subtly).
ignore = ["B008", "UP042"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
